--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <!-- React vive dentro de este div. Por lo tanto solo lo que construyanmos de react se va a este id="root" -->
+    <div id="root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
