feat: transition guardar en storage y ajustar responsive

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#e14540" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
-    <!-- React vive dentro de este div. Por lo tanto solo lo que construyanmos de react se va a este id="root" -->
+    <!-- React vive dentro de este div. Por lo tanto solo lo que construyamos de react se va a este id="root" -->
     <div id="root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
